# cs240h

./: Basics.hs  Outcome.hs  README.md  greet.hs  greet1.hs  rock1.hs  rock2.hs
basics/: DMR.hs
concurrency/: Exceptions.hs  netcat.hs  netrock.hs  pingpong.hs  rock2solution.hs
generic/: Typeable.hs  metadata.hs
ifc/: RIO.hs  millattice.hs
iteratee/: CountLines.hs
lab1/tr-0.1.0.0/: LICENSE  README.md  tr.cabal
lab1/tr-0.1.0.0/app/: Main.hs
lab1/tr-0.1.0.0/src/: Parser.hs  Tr.hs  Utils.hs
lab1/tr-0.1.0.0/src/Course/: Anagrams.hs  Applicative.hs  Cheque.hs  Comonad.hs  Compose.hs  Extend.hs  FastAnagrams.hs  FileIO.hs  Functor.hs  Interactive.hs  JsonParser.hs  List.hs  ListZipper.hs  Monad.hs  MoreParser.hs  Optional.hs  State.hs  StateT.hs  Traversable.hs
lab1/tr-0.1.0.0/test/: Spec.hs
lab2/parseini-0.1.0.0/: LICENSE  README.md  parseini.cabal
lab2/parseini-0.1.0.0/app/: Main.hs
lab2/parseini-0.1.0.0/examples/: ex1In.txt  ex1Out.txt  ex2In.txt  ex2Out.txt  ex3In.txt  ex3Out.txt  ex4In.txt  ex4Out.txt  ex5In.txt  ex5Out.txt  ex6In.txt  ex6Out.txt  ex7In.txt  ex7Out.txt  ex8In.txt  ex8Out.txt  ex9In.txt  ex9Out.txt
lab2/parseini-0.1.0.0/src/: ParseIni.hs  PrettyPrintIni.hs
lab2/parseini-0.1.0.0/test/: Spec.hs
lab3/inimerge-0.1.0.0/: LICENSE  README.md  inimerge.cabal
lab3/inimerge-0.1.0.0/app/: IniMerge.hs
lab3/inimerge-0.1.0.0/src/: MergeIni.hs  ParseIni.hs  Parser.hs  PrettyPrintIni.hs
lab3/inimerge-0.1.0.0/test/: GenIni.hs  Spec.hs
lenses/: Focus.hs  Hole1.hs
memory/: transfer.hs
parsing/: DumbP.hs  P.hs  attoparsec.hs
phantoms/: MonoidEitherInstance.hs  Payload.hs  PayloadPhantom.hs
testing/: ShrinkChar.hs  TestPoint.hs  Utf16.hs
turtles/: example.hs  tuple.hs
