name:                tr
version:             0.1.0.0
synopsis:            Simple tr clone (Stanford CS240H Lab 1)
description:         Please see README.md
homepage:            cs240h.scs.stanford.edu
license:             BSD3
license-file:        LICENSE
author:              CS240H Staff
maintainer:          http://www.scs.stanford.edu/16wi-cs240h/
copyright:           2015 David Terei
category:            unknown
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Tr
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

executable tr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tr
  default-language:    Haskell2010

test-suite tr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tr
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
