name:                inimerge
version:             0.1.0.0
synopsis:            Command-line password manager (Stanford CS240H Lab 3)
description:

  pm is a command-line password manager.  It manages passwords and
  other data associated with various accounts.  The password database
  is a single, PGP-encrypted, INI file that gets automatically
  synchronized through git.

homepage:            cs240h.scs.stanford.edu
license:             GPL-3
license-file:        LICENSE
author:              CS240H Staff
maintainer:          http://www.scs.stanford.edu/16wi-cs240h/
copyright:           2016 David Mazieres
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     MergeIni
                     , ParseIni
                     , PrettyPrintIni
  other-modules:       Parser
  build-depends:       base >=4.8
                     , bytestring >= 0.10
                     , containers >= 0.5
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

executable inimerge
  hs-source-dirs:      app
                     -- So stack ghci works
                     , test
  main-is:             IniMerge.hs
  build-depends:       inimerge
                     , base >=4.8
                     , bytestring >= 0.10
                     -- So stack ghci works
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GenIni
  build-depends:       inimerge
                     , base >= 4.8
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , QuickCheck
                     , test-framework
                     , test-framework-quickcheck2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
